# loa-details

./: .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .prettierrc  README.md  index.html  package-lock.json  package.json  postcss.config.js  quasar.config.js  tsconfig.json
ldn/: .gitignore  CMakeLists.txt
ldn/assets/: box.frag  box.vert  simple_image.frag  simple_image.vert  text.frag  text.vert
ldn/src/: ldn.cc  ldn.h  main.cc  window_events.h
ldn/src/components/: box.cc  box.h  button.cc  button.h  header.cc  header.h  image.cc  image.h  lower_row.cc  lower_row.h  meter_header_row.cc  meter_header_row.h  meter_row.cc  meter_row.h  row.cc  row.h  row_list.cc  row_list.h  text.cc  text.h
ldn/src/conn/: connection.cc  connection.h  data_manager.cc  data_manager.h  static_data.cc  static_data.h
ldn/src/rendering/: component.h  font_atlas.cc  font_atlas.h  glad.c  glad.h  khrplatform.h  la.cc  la.h  opengl_state.cc  opengl_state.h  render_context.h  shader.cc  shader.h
ldn/src/utils/: color_util.h  file_util.h  format_utils.h  image_cache.cc  image_cache.h  unicode_utils.h
scripts/: build_win.ps1  release_win.ps1
shared/: index.ts
src/: App.vue  constants.min.js  globals.d.ts
src-electron/: electron-env.d.ts  electron-main.js  electron-main.ts  electron-preload.js  electron-preload.ts  http-bridge.js  ldn.ts  logger.ts  packet-capture-bridge.js  session-state.js
src-electron/electron-windows/: damage-meter-window.js  damage-meter-window.ts  index.ts  main-window.js  main-window.ts  prelauncher-window.js  prelauncher-window.ts
src-electron/icons/: icon.icns
src-electron/log-files/: helper.js  parser.js
src-electron/log-parser/: file-parser-parent.js  file-parser-worker.js  file-parser.js  file-parser.ts  log-lines.js  main.js
src-electron/translations/: en.js
src-electron/util/: app-settings.js  app-settings.ts  compression.js  directories.js  directories.ts  helpers.js  helpers.ts  screenshot.js  screenshot.ts  settings.ts  shortcuts-manager.js  shortcuts-manager.ts  store.ts  timeout.js  updater.js  updater.ts  uploads.js  window-init.js  window-init.ts
src-electron/windows/: damage-meter.js  index.js  main.js
src/constants/: skills.js  (+7 more)
types/: index.d.ts
(+40 files in other folders)
